fixed spacing of convo text and buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ section{
 .inner {
 	margin-left: auto;
 	margin-right: auto;
-	width: 75%;
+	width: 57%;
 }
 
 .prompt {
@@ -68,6 +68,14 @@ section{
 	font-size: 2.7em;
 	display: inline-block;
 	vertical-align: middle;
+}
+
+.convo-btns{
+  width: 75%;
+  margin-top: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 #prompt-4 {
@@ -117,13 +125,6 @@ section{
 	text-align: center;
 }
 
-.container-buttons {
-	width: 75%;
-	margin-top: 5%;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
-}
 
 #container-button-2a {
 	position: relative;
